<resources>
    <string name="app_name">Guru On Demand</string>
    <string name="loginScreen">Login</string>
    <string name="hint_email">Enter You Email</string>
    <string name="hint_pwd">Enter Your Password</string>
    <string name="login_btn">Login</string>
    <string name="goto_signup">Not Registered User ?</string>
    <string name="forgot_pwd">Forgot Password ?</string>
    <string name="val_err_email">Please Enter your Valid email id</string>
    <string name="signup">Sign Up</string>
    <string name="hint_name">Enter your Name</string>
    <string name="hint_enrollment">Enter Your Enrollment</string>
    <string name="hint_mobile">Enter Your Mobile</string>
    <string name="already_registered">Already Registered user?</string>
    <string name="err_password">The password should contain at least 8 characters, including at least one lower case letter, one upper case letter, one number</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_college_location">Map</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="mentor">Mentor</string>
    <string name="student">Student</string>
    <string name="faculty_reg">Mentor Registration?</string>
    <string name="select_department">Select Industry</string>
    <string name="select_semester">Select Semester</string>
    <string name="department">Department</string>
    <string name="gallery">Gallery</string>
    <string name="sbifees">SBI FEES</string>
    <string name="notification">Notification</string>
    <string name="aboutus">About Us</string>
    <string name="contactus">Contact Us</string>
    <string name="dept_it">I.T.</string>
    <string name="dept_computer">C.E.</string>
    <string name="dept_mechanical">Mechanical</string>
    <string name="dept_civil">Civil</string>
    <string name="dept_chemical">Chemical</string>
    <string name="dept_texttile">TextTile</string>
    <string name="approve_st">Approve</string>
    <string name="cancle">Cancle</string>
    <string name="google_maps_key"></string>


    <string name="about">To establish and manage institutions with an environment in which new ideas, delivery strategies and scholarship flourish and from where leaders and innovators of tomorrow shall emerge</string>
    <string name="hint_qualification">Enter Qualification</string>
    <string name="hint_experince">Enter Experience</string>
    <string name="next">Next</string>
    <string name="post_title">Title of Post</string>
    <string name="post_description">Description of Post</string>
    <string name="filename">File name</string>
    <string name="choose_file">choose file</string>
    <string name="send">Send</string>
    <string name="nofile_selected">No File selected</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="err_name">Enter Your Name</string>
    <string name="err_tel">Enter 10 digit mobile number</string>
    <string name="skill"><![CDATA[Exeprt & Skills]]></string>
    <string name="valid_value">Enter Value</string>
    <string name="request">Request</string>
    <string name="select_role">Select Role</string>
    <string name="submit">Submit</string>
    <string name="book_review">Comment</string>
    <string name="download_file">Download</string>
    <string name="like">Likes</string>
    <string name="category">Industry</string>


    <!--Department Array-->
    <string-array name="departmentArray">
        <item>Chemical engineering</item>
        <item>Computer engineering</item>
        <item>Civil engineering</item>
        <item>Applied mechanics</item>
        <item>Electrical engineering</item>
        <item>E.C engineering</item>
        <item>Information technology</item>
        <item>Instrumentation Control</item>
        <item>Mechanical engineering</item>
        <item>Power electronics</item>
    </string-array>

    <string-array name="mentorType">
        <item>Developer</item>
        <item>Faculty</item>
    </string-array>

</resources>
