<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:context="com.lj.ljengineeringcollege.SignupActivity">

        <ImageView
            android:id="@+id/login_logo_img"
            android:layout_width="159dp"
            android:layout_height="127dp"
            android:layout_marginTop="41dp"
            android:contentDescription="@null"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mentor_logo"
            tools:ignore="VectorDrawableCompat" />

        <EditText
            android:id="@+id/activity_faculty_registration_name_ed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/vector_user"
            android:ems="10"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_logo_img" />

        <EditText
            android:id="@+id/activity_faculty_registration_email_ed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/vector_email"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_faculty_registration_name_ed" />

        <EditText
            android:id="@+id/activity_faculty_registration_password_ed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/vector_password"
            android:ems="10"
            android:hint="@string/hint_pwd"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_faculty_registration_email_ed" />

        <EditText
            android:id="@+id/activity_signup_enrollment_ed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/vector_enrollment"
            android:ems="10"
            android:hint="@string/hint_enrollment"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_faculty_registration_password_ed" />

        <EditText
            android:id="@+id/activity_faculty_registration_mobile_ed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/vector_mobile"
            android:ems="10"
            android:hint="@string/hint_mobile"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_signup_enrollment_ed" />

        <Spinner
            android:id="@+id/activity_faculty_registration_department_spinner"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:entries="@array/departmentArray"
            android:prompt="@string/select_department"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_faculty_registration_mobile_ed" />

        <Spinner
            android:id="@+id/activity_signup_semester_spinner"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:entries="@array/semesterArray"
            android:prompt="@string/select_semester"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_faculty_registration_department_spinner" />

        <Button
            android:id="@+id/activity_faculty_registration_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorAccent"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/signup"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_signup_semester_spinner"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/activity_signup_already_registered_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/already_registered"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_faculty_registration_btn" />

        <TextView
            android:id="@+id/activity_signup_faculty_registration_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/faculty_reg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_faculty_registration_btn"
            app:layout_constraintVertical_bias="0.49" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>