<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:context="com.lj.ljengineeringcollege.SignupActivity">

        <ImageView
            android:id="@+id/login_logo_img"
            android:layout_width="159dp"
            android:layout_height="127dp"
            android:layout_marginTop="41dp"
            android:contentDescription="@null"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mentor_logo"
            tools:ignore="VectorDrawableCompat" />

        <EditText
            android:id="@+id/activity_mentor_details_insert_qualification_ed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/vector_qualification"
            android:ems="10"
            android:hint="@string/hint_qualification"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_logo_img" />

        <EditText
            android:id="@+id/activity_mentor_details_insert_experience"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/vector_education"
            android:ems="10"
            android:hint="@string/hint_experince"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_mentor_details_insert_qualification_ed" />

        <Spinner
            android:id="@+id/activity_mentor_details_insert_mentor_type_sp"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:entries="@array/mentorType"
            android:prompt="@string/select_department"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_mentor_details_insert_experience" />


        <Button
            android:id="@+id/activity_mentor_details_insert_signup_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorAccent"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/signup"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_mentor_details_insert_mentor_type_sp"
            tools:targetApi="lollipop" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>